change slider component

--- a/html/index.html
+++ b/html/index.html
@@ -3,9 +3,10 @@
 		<meta charset="utf-8" />
 		<title>HomePage</title>
 		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/responsiveslides.css">
+		<link rel="stylesheet" href="css/slick.css">
+		<link rel="stylesheet" href="css/slick-theme.css">
 		<script src="js/jquery.min.js"></script>
-		<script src="js/responsiveslides.min.js"></script>
+		<script src="js/slick.min.js"></script>
 		<script src="js/script.js"></script>
 	</head>
 	<body>
@@ -42,6 +43,9 @@
 					<li class="menu1_item"><a href="">教学</a></li>
 				</ul>
 			</div>
+			<div class="intro_head">"</div>
+			<div class="intro">上海市民办扬波外国语小学成立于1992年夏，是一所全日制民办小学，<br>是上海市首批民办学校之一，是上海市民办中小学依法办学评估优秀校，<br>是上海市十二所外语类及外语特色类学校教学联盟的成员之一。</div>
+			<div class="intro_tail">"</div>
 			<div class="menu2">
 				<ul>
 					<li class="menu2_item"><a href="">学生活动</a></li>
