change slider component

--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,7 @@
 				<div class="login">登陆</div>
 			</div>
 			<div class="slider">
-				<ul class="rslides" id="dowebok">
+				<ul class="flash_slides">
 					<li><a href="" target="_blank"><img class="slider_img" src="images/flash1.jpg" alt=""></a></li>
 					<li><a href="" target="_blank"><img class="slider_img" src="images/flash2.jpg" alt=""></a></li>
 					<li><a href="" target="_blank"><img class="slider_img" src="images/flash3.jpg" alt=""></a></li>
@@ -46,6 +46,17 @@
 			<div class="intro_head">"</div>
 			<div class="intro">上海市民办扬波外国语小学成立于1992年夏，是一所全日制民办小学，<br>是上海市首批民办学校之一，是上海市民办中小学依法办学评估优秀校，<br>是上海市十二所外语类及外语特色类学校教学联盟的成员之一。</div>
 			<div class="intro_tail">"</div>
+			<div class="school_content">
+				<ul class="school_slides">
+					<li><div class="school_slides_block"><a href="" target="_blank"><img class="slider_img" src="images/flash1.jpg" alt=""><div class="school_text_block"><p>上海市民办扬波外国语小学建校二十周年庆典</p></div></a></div></li>
+					<li><div class="school_slides_block"><a href="" target="_blank"><img class="slider_img" src="images/flash2.jpg" alt=""><div class="school_text_block"><p>content</p></div></a></div></li>
+					<li><div class="school_slides_block"><a href="" target="_blank"><img class="slider_img" src="images/flash3.jpg" alt=""><div class="school_text_block"><p>content</p></div></a></div></li>
+					<li><div class="school_slides_block"><a href="" target="_blank"><img class="slider_img" src="images/flash1.jpg" alt=""><div class="school_text_block"><p>content</p></div></a></div></li>
+					<li><div class="school_slides_block"><a href="" target="_blank"><img class="slider_img" src="images/flash2.jpg" alt=""><div class="school_text_block"><p>content</p></div></a></div></li>
+					<li><div class="school_slides_block"><a href="" target="_blank"><img class="slider_img" src="images/flash3.jpg" alt=""><div class="school_text_block"><p>content</p></div></a></div></li>
+				</ul>
+			</div>
+			<button class="school_content_more">查看更多</button>
 			<div class="menu2">
 				<ul>
 					<li class="menu2_item"><a href="">学生活动</a></li>
